--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
+
+
 * {
   margin: 0px;
   padding: 0px;
@@ -27,6 +30,12 @@ header {
 
 header h1 {
   color: white;
+}
+
+header h1 a {
+  color: white;
+  text-decoration: none;
+  font-family: 'Noto Serif JP', sans-serif;
 }
 
 nav {
